--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ Flask==0.12.3
 Flask-SQLAlchemy==2.0
 gunicorn==19.5.0
 itsdangerous==0.24
-Jinja2==2.7.3
+Jinja2>=2.10.1
 MarkupSafe==0.23
-SQLAlchemy==1.0.5
+SQLAlchemy>=1.3.0
 Werkzeug==0.10.4
 wheel==0.24.0
