--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==0.10.1
-Flask-SQLAlchemy==2.0
-gunicorn==19.3.0
+Flask==1.0.2
+Flask-SQLAlchemy==2.3.2
+gunicorn==19.5.0
 itsdangerous==0.24
-Jinja2==2.7.3
+Jinja2>=2.10.1
 MarkupSafe==0.23
-SQLAlchemy==1.0.5
-Werkzeug==0.10.4
+SQLAlchemy>=1.3.0
+Werkzeug==0.15.5
 wheel==0.24.0
