--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Flask==1.0.2
-Flask-SQLAlchemy==2.3.2
+Flask-SQLAlchemy==2.4.1
+Flask-Migrate==2.3.1
 gunicorn==19.5.0
 itsdangerous==0.24
 Jinja2>=2.10.1
-MarkupSafe==0.23
-SQLAlchemy>=1.3.0
+MarkupSafe==1.1.1
+SQLAlchemy>=1.3.12
+sqlalchemy-migrate==0.13.0
 Werkzeug==0.15.5
 wheel==0.24.0
