--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ gunicorn==19.5.0
 itsdangerous==0.24
 Jinja2>=2.10.1
 MarkupSafe==1.1.1
+psycopg2==2.8.4
 SQLAlchemy>=1.3.12
 sqlalchemy-migrate==0.13.0
 Werkzeug==0.15.5
