--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==1.0.2
+Flask==1.1.1
 Flask-SQLAlchemy==2.4.1
-Flask-Migrate==2.3.1
+Flask-Migrate==2.5.2
 gunicorn==19.5.0
 itsdangerous==0.24
 Jinja2>=2.10.1
@@ -10,3 +10,4 @@ SQLAlchemy>=1.3.12
 sqlalchemy-migrate==0.13.0
 Werkzeug==0.15.5
 wheel==0.24.0
+python-dotenv==0.11.0
